refactor(api): remove internal token auth requirement
